# AutoCategorization

./: .editorconfig  .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml  railway.json
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 1f4bce0e8732_initial_schema.py  3c63c6bc20da_add_jobs_table.py
backend/app/: main.py
backend/app/api/: health.py
backend/app/api/v1/: __init__.py  customers.py  jobs.py  meetings.py  metrics.py  sellers.py  uploads.py
backend/app/cli/: seed.py
backend/app/core/: config.py  logging.py  middleware.py  security.py
backend/app/db/: session.py
backend/app/models/: __init__.py  categorization.py  customer.py  enums.py  job.py  meeting.py  seller.py
backend/app/schemas/: categorization.py  customers.py  ingest.py  metrics.py
backend/app/services/: csv_ingest.py  customers.py  metrics.py
backend/app/services/categorization/: batch.py  mapping.py  service.py
backend/app/services/llm/: base.py  factory.py  prompt.py  schema.py
backend/app/services/llm/providers/: groq.py  mock.py
backend/tests/: test_categorization_mapping.py  test_csv_parser.py  test_health.py  test_llm_factory.py  test_llm_groq_provider.py  test_llm_mock_provider.py  test_llm_prompt.py  test_llm_schema.py  test_metrics_filters.py  test_models_metadata.py  test_request_id.py  test_root.py  test_version.py
backend/tests/fixtures/: sample.csv
docs/: deploy.md
frontend/: .dockerignore  .env.example  README.md  (+6 more)
(+40 files in other folders)
